[project]
name = "brain-dex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kaue Lunelli", email = "lunellikaue@gmail.com" }
]
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy>=2.2.6",
    "pandas>=3.0.2",
    "tribev2",
]

[project.scripts]
brain-dex = "brain_dex:main"

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
tribev2 = { git = "https://github.com/facebookresearch/tribev2.git" }
